--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "hooks:install": "lefthook install"
    },
    "devDependencies": {
+      "@blue-cheese/linters": "^0.1.1",
       "@craftamap/esbuild-plugin-html": "^0.8.0",
       "@eslint/js": "^9.14.0",
       "@rollup/plugin-alias": "^5.1.0",
