--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "baseUrl": "./",
       "paths": {
          "~core/*": [
-            "src/core/*"
+            "src/lib/core/*"
          ],
          "~assets/*": [
             "assets/*"
