infra: added new aliases for ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
          "~core/*": [
             "src/lib/core/*"
          ],
+         "~lib/*": [
+            "src/lib/*"
+         ],
          "~assets/*": [
             "assets/*"
          ]
