--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,6 +22,9 @@
          "~core/*": [
             "src/lib/core/*"
          ],
+         "~lib/*": [
+            "src/lib/*"
+         ],
          "~assets/*": [
             "assets/*"
          ]
