--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,7 @@ pre-commit:
       lint:
          glob: "*.{ts,js}"
          run: yarn run lint {staged_files}
-      fmt:
+      yarn prettier:
          glob: "*.{ts,md}"
          run: yarn run fmt:write {staged_files}
 
