--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,9 +4,9 @@ pre-commit:
       lint:
          glob: "*.{ts,js}"
          run: yarn run lint {staged_files}
-      yarn prettier:
+      fmt:
          glob: "*.{ts,md}"
-         run: yarn run fmt:write {staged_files}
+         run: yarn prettier {staged_files}
 
 pre-push:
    commands:
