--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,24 @@
-name: test
+name: main
 
 on:
    push:
-      branches: [main]
+      branches: [ci]
+
+jobs:
+   linters:
+      runs-on: ubuntu-22.04
+
+      steps:
+         - uses: actions/checkout@v4
+
+         - uses: actions/setup-node@v4
+
+           with:
+              cache: 'yarn'
+              node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run lint
+            run: yarn lint
