--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ jobs:
          - uses: actions/checkout@v4
 
          - uses: actions/setup-node@v4
-
            with:
               cache: 'yarn'
               node-version: ${{ matrix.node-version }}
@@ -26,3 +25,24 @@ jobs:
 
          -  name: Run lint
             run: yarn lint
+
+   test:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [22.x]
+
+      steps:
+         -  uses: actions/checkout@v4
+
+         -  uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run test
+            run: yarn test
