--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: main
 
 on:
    push:
-      branches: [ci]
+      branches: [ ci ]
 
 jobs:
    linters:
@@ -10,15 +10,15 @@ jobs:
 
       strategy:
          matrix:
-            node-version: [22.x]
+            node-version: [ 22.x ]
 
       steps:
-         - uses: actions/checkout@v4
+         -  uses: actions/checkout@v4
 
-         - uses: actions/setup-node@v4
-           with:
-              cache: 'yarn'
-              node-version: ${{ matrix.node-version }}
+         -  uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
 
          -  name: Install dependencies
             run: yarn
@@ -31,7 +31,7 @@ jobs:
 
       strategy:
          matrix:
-            node-version: [22.x]
+            node-version: [ 22.x ]
 
       steps:
          -  uses: actions/checkout@v4
@@ -46,3 +46,25 @@ jobs:
 
          -  name: Run test
             run: yarn test
+
+   build:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [ 22.x ]
+
+
+      steps:
+         -  uses: actions/checkout@v4
+
+         -  uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run build
+            run: yarn build
