--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
          matrix:
             node-version: [ 22.x ]
 
+      needs: test
 
       steps:
          -  uses: actions/checkout@v4
