--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,11 @@ jobs:
             node-version: [ 21.x ]
 
       steps:
-         -  uses: actions/checkout@v4
+         -  name: Checkout code
+            uses: actions/checkout@v4
 
-         -  uses: actions/setup-node@v4
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
             with:
                cache: 'yarn'
                node-version: ${{ matrix.node-version }}
@@ -34,9 +36,11 @@ jobs:
             node-version: [ 21.x ]
 
       steps:
-         -  uses: actions/checkout@v4
+         -  name: Checkout code
+            uses: actions/checkout@v4
 
-         -  uses: actions/setup-node@v4
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
             with:
                cache: 'yarn'
                node-version: ${{ matrix.node-version }}
@@ -57,9 +61,11 @@ jobs:
       needs: test
 
       steps:
-         -  uses: actions/checkout@v4
+         -  name: Checkout code
+            uses: actions/checkout@v4
 
-         -  uses: actions/setup-node@v4
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
             with:
                cache: 'yarn'
                node-version: ${{ matrix.node-version }}
