--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,26 @@ on:
       branches: [ ci ]
 
 jobs:
+   dependencies:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [ 21.x ]
+
+      steps:
+         -  name: Checkout code
+            uses: actions/checkout@v4
+
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
    linters:
       runs-on: ubuntu-22.04
 
