--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
          matrix:
             node-version: [ 21.x ]
 
+      needs: dependencies
+
       steps:
          -  name: Checkout code
             uses: actions/checkout@v4
@@ -54,6 +56,8 @@ jobs:
       strategy:
          matrix:
             node-version: [ 21.x ]
+
+      needs: dependencies
 
       steps:
          -  name: Checkout code
