--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,3 +75,36 @@ jobs:
 
          -  name: Run build
             run: yarn build
+
+   deploy:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [ 21.x ]
+
+      needs: test
+
+      steps:
+         -  name: Checkout code
+            uses: actions/checkout@v4
+
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run build
+            run: yarn build
+
+         -  name: Run deploy
+            run: |
+               git config --local user.email "iosdsbb@github.com"
+               git config --local user.name "fower-code"
+               git add dist
+               git commit -m "deploy"
+               git push
