ci: updated job deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
          matrix:
             node-version: [ 21.x ]
 
-      needs: test
+      needs: [test,deploy]
 
       steps:
          -  name: Checkout code
