ci: updated job deploy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,20 +96,18 @@ jobs:
                cache: 'yarn'
                node-version: ${{ matrix.node-version }}
 
-#         -  name: Install dependencies
-#            run: yarn
-#
-#         -  name: Run build
-#            run: yarn build
+         -  name: Install dependencies
+            run: yarn
 
-         - name: Show TOKEN
-           run: echo ${{ secrets }}
-#         -  name: Run deploy
-#            run: |
-#               git config --local user.email "iosdsbb@github.com"
-#               git config --local user.name "fower-code"
-#               git add dist
-#               git commit -m "deploy"
-#               git push
-#            env:
-#               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         -  name: Run build
+            run: yarn build
+
+         - name: Run deploy
+           env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           run: |
+               git config --local user.email "iosdsbb@github.com"
+               git config --local user.name "fower-code"
+               git add dist
+               git commit -m "deploy"
+               git push
