--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,86 +5,60 @@ on:
       branches: [ ci ]
 
 jobs:
-#   linters:
-#      runs-on: ubuntu-22.04
-#
-#      strategy:
-#         matrix:
-#            node-version: [ 21.x ]
-#
-#      steps:
-#         -  name: Checkout code
-#            uses: actions/checkout@v4
-#
-#         -  name: Set up Node.js ${{ matrix.node-version }}
-#            uses: actions/setup-node@v4
-#            with:
-#               cache: 'yarn'
-#               node-version: ${{ matrix.node-version }}
-#
-#         -  name: Install dependencies
-#            run: yarn
-#
-#         -  name: Run lint
-#            run: yarn lint
-#
-#   test:
-#      runs-on: ubuntu-22.04
-#
-#      strategy:
-#         matrix:
-#            node-version: [ 21.x ]
-#
-#      steps:
-#         -  name: Checkout code
-#            uses: actions/checkout@v4
-#
-#         -  name: Set up Node.js ${{ matrix.node-version }}
-#            uses: actions/setup-node@v4
-#            with:
-#               cache: 'yarn'
-#               node-version: ${{ matrix.node-version }}
-#
-#         -  name: Install dependencies
-#            run: yarn
-#
-#         -  name: Run test
-#            run: yarn test
-#
-#   build:
-#      runs-on: ubuntu-22.04
-#
-#      strategy:
-#         matrix:
-#            node-version: [ 21.x ]
-#
-#      needs: test
-#
-#      steps:
-#         -  name: Checkout code
-#            uses: actions/checkout@v4
-#
-#         -  name: Set up Node.js ${{ matrix.node-version }}
-#            uses: actions/setup-node@v4
-#            with:
-#               cache: 'yarn'
-#               node-version: ${{ matrix.node-version }}
-#
-#         -  name: Install dependencies
-#            run: yarn
-#
-#         -  name: Run build
-#            run: yarn build
-
-   deploy:
-#      environment: ${{ secrets.GITHUB_TOKEN }}
+   linters:
       runs-on: ubuntu-22.04
 
       strategy:
          matrix:
             node-version: [ 21.x ]
 
-#      needs: [test,build]
+      steps:
+         -  name: Checkout code
+            uses: actions/checkout@v4
+
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run lint
+            run: yarn lint
+
+   test:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [ 21.x ]
+
+      steps:
+         -  name: Checkout code
+            uses: actions/checkout@v4
+
+         -  name: Set up Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v4
+            with:
+               cache: 'yarn'
+               node-version: ${{ matrix.node-version }}
+
+         -  name: Install dependencies
+            run: yarn
+
+         -  name: Run test
+            run: yarn test
+
+   build:
+      runs-on: ubuntu-22.04
+
+      strategy:
+         matrix:
+            node-version: [ 21.x ]
+
+      needs: test
 
       steps:
          -  name: Checkout code
@@ -101,13 +75,3 @@ jobs:
 
          -  name: Run build
             run: yarn build
-
-         - name: Run deploy
-           env:
-              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-           run: |
-               git config --local user.email "iosdsbb@github.com"
-               git config --local user.name "fower-code"
-               git add dist
-               git commit -m "deploy"
-               git push
