ci: updated workflow dev

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,10 @@
 name: main
 
 on:
-   push:
-      branches: [ ci ]
+   #  push:
+   #    branches: [ main ]
+   pull_request:
+      branches: [ main ]
 
 jobs:
    linters:
